<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/navigate_events" />
        <item
            android:id="@+id/nav_route"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/navigate_route" />
        <item
            android:id="@+id/nav_quick"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/navigate_quick" />
        <item
            android:id="@+id/nav_changemap"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/navigate_changemap" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigate_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/navigate_logout" />
    </group>

</menu>
