<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team16.project.team.orbis.LoginActivity">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:layout_marginBottom="150px"
            android:layout_weight="1"
            android:contentDescription="Main Logo"
            app:srcCompat="@drawable/app_logo" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Login progress -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColorHint="@android:color/background_light">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/signin"
                        style="?android:textAppearanceSmall"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/skip_signin"
                        style="?android:textAppearanceSmall"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_skip_sign_in"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </TableRow>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

